--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,12 @@
 @tailwind utilities;
 
 .text-green-900 {
-  color: #00582A;
+  color: #00582a;
 }
 
 .section-1 {
-  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('imgs/section-1-bg.png');
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('imgs/section-1-bg.png');
 }
 
 .section-2 {
@@ -15,9 +16,28 @@
 }
 
 .section-3 {
-  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('imgs/section-3-bg.png');
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('imgs/section-3-bg.png');
+}
+
+body > section[class^="section-"] {
+  /* Set full height */
+  min-height: 100vh;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 footer {
   background-color: #454545;
+}
+
+/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
+@media only screen and (max-device-width: 1366px) {
+  body > section[class^="section-"] {
+    background-attachment: scroll;
+  }
 }
