--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,14 @@
   color: #00582a;
 }
 
+.scroll-down-arrow {
+  position: fixed;
+  bottom: 0.5rem;
+  left: calc(50vw - 0.9rem);
+  font-size: 2rem;
+  color: gainsboro;
+}
+
 .section-1 {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url('imgs/section-1-bg.png');
